--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rabby.io",
+  "name": "luxwallet.xyz",
   "version": "1.0.0",
   "description": "",
   "private": true,
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/RabbyHub/rabby.io.git"
+    "url": "git+https://github.com/luxfi/luxwallet.xyz.git"
   },
   "author": "",
   "license": "ISC",
